--- a/custom-image/approval/templates/result.html
+++ b/custom-image/approval/templates/result.html
@@ -7,6 +7,8 @@
 </head>
 <body>
     <p>{{ result }}</p>
-    <a href="/">Go back</a>
+    <form action="/shutdown" method="post">
+        <button type="submit" name="action" value="done">Done</button>
+    </form>
 </body>
 </html>
