--- a/custom-image/approval/templates/result.html
+++ b/custom-image/approval/templates/result.html
@@ -14,7 +14,9 @@
     <p>{{ result }}</p>
     <form action="/shutdown" method="post">
         <input type="hidden" name="approval_code" value="{{ approval_code }}">
-        <button type="submit" name="action" value="done" onclick="closeTab()">Done</button>
+        <button type="submit" name="action" value="done">Done</button> 
+        <!-- <button type="submit" name="action" value="done" onclick="closeTab()">Done</button> 
+        -->
     </form>
 </body>
 </html>
