update new windwwod

--- a/custom-image/approval/templates/index.html
+++ b/custom-image/approval/templates/index.html
@@ -6,12 +6,10 @@
     <title>Approval System</title>
 </head>
 <body>
-    <form action="/process" method="post">
-        <label for="approval_code">Approval Code:</label>
-        <input type="text" id="approval_code" name="approval_code" required>
-        <br>
-        <button type="submit" name="action" value="approve">Approve</button>
-        <button type="submit" name="action" value="reject">Reject</button>
-    </form>
+  <script>
+    window.open('/approvepage','_blank','width=500, height=500');
+  </script>
+
+
 </body>
 </html>
