--- a/custom-image/approval/templates/result.html
+++ b/custom-image/approval/templates/result.html
@@ -12,9 +12,10 @@
     </script>
 </head>
 
-<body bgcolor="#6495ED">
+<body bgcolor="#2E8B57">
     <p style="text-align: center;">{{ result }}</p>
-    <p style="text-align: center;">Click Done button to confirm action</p>
+    <p></p>
+    <p style="text-align: center;">Click Done button to confirm action, and then you can close this windows </p>
     <form action="/shutdown" method="post" style="text-align: center;"><input type="hidden" name="approval_code" value="{{ approval_code }}"> <button type="submit" name="action" value="done">Done</button>
         <!-- <button type="submit" name="action" value="done" onclick="closeTab()">Done</button> 
         -->
