--- a/custom-image/approval/templates/approve.html
+++ b/custom-image/approval/templates/approve.html
@@ -9,6 +9,8 @@
 
 <body>
     <p style="text-align: center;"><br></p>
+    <p style="text-align: center;">{{ image_tag }}</p>
+    <p style="text-align: center;">{{ environment }}</p>
     <form action="/process" method="post">
         <table style="width: 100%;">
             <tbody>
